# AgentLens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  package.json  pyproject.toml  requirements.txt  setup.py
docs/: README.en.md  README.zh-TW.md
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentChart.tsx  CostChart.tsx  DailyChart.tsx  Layout.tsx  StatCard.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Sessions.tsx  Settings.tsx
src/: __init__.py  main.py
src/agentlens/: __init__.py  __main__.py  cli.py
src/agentlens/analyzers/: __init__.py
src/agentlens/exporters/: __init__.py
src/agentlens/models/: __init__.py
src/agentlens/parsers/: __init__.py
src/agentlens/ui/: __init__.py
src/agentlens/utils/: __init__.py
src/api/: routes.py
src/cli/: main.py
src/core/: config.py  database.py  models.py
src/services/: analytics.py  cost_calculator.py
tests/: test_agentlens.py  test_api.py  test_cost_calculator.py
