[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "1.0.0"
description = "AI Agent Session Analytics Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentLens Team", email = "team@agentlens.dev"}
]
keywords = ["ai", "agent", "analytics", "session", "tracking", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "flake8>=7.1.0",
    "mypy>=1.10.0",
]

[project.scripts]
agentlens = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/agentlens"
Documentation = "https://github.com/yourusername/agentlens#readme"
Repository = "https://github.com/yourusername/agentlens"
Issues = "https://github.com/yourusername/agentlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
